--- a/resources/css/anthemes-shortcodes.css
+++ b/resources/css/anthemes-shortcodes.css
@@ -1,7 +1,6 @@
 /*
 
-Name: Anthemes Shortcodes
-URI: http://themeforest.net/user/An-Themes/portfolio
+Name: Masonry Shortcodes
 
 -------------------------------------------------- */
 .clear                     { clear:both; display:block;}
